--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -46,13 +46,16 @@
 
 #small{
     width: 100%;
-    background-color: rgba(246, 193, 193, 0.348);
+    padding: 12px;
+    color: white;
     padding-right: 20px;
     row-gap: 3px;
     position: absolute;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    background-color: rgba(255, 0, 0, 0.367);
+    align-items: center;
+    justify-content: center;
+    column-gap: 12px;
     
 }
 
