--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -7,6 +7,12 @@
     justify-content: center;
 }
 
+#home-second{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 #heading1{
     color: red;
@@ -26,6 +32,36 @@
     width: fit-content;
 }
 
+
+#home-second{
+   display: flex;
+   column-gap: 20px;
+   row-gap: 20px;
+   flex-wrap: wrap;
+   align-items: center;
+   justify-content: center;
+}
+
+#home-second-child{
+  text-align: center;
+  font-weight: 700;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
+  color: white;
+  height: 180px;
+  width: 200px;
+  padding: 20px;
+  background-color: red;
+  transform: rotate(30deg);
+  transition: transform 1s;
+}
+
+#home-second-child:hover{
+   transform: rotate(-30deg);
+}
 
 @keyframes typing {
   from {
@@ -54,5 +90,9 @@
         font-size: 56px;
         letter-spacing: 5px;
     }   
+
+    #home-second-child{
+      transform: none;
+    }
 }
 
