--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -70,7 +70,11 @@
         justify-content: space-between;
     }
     
-    #link-div, #header-call-div{
+     #header-call-div{
+        display: none;
+     }
+
+    #link-div{
         display: none;
     }
 }
