--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -92,6 +92,9 @@
     }   
 
     #home-second-child{
+      height: 150px;
+      width: 150px;
+      font-size: 16px;
       transform: none;
     }
 }
